# TraceIt

./: .gitignore  CMakeLists.txt  LICENCE  README.md  main.cpp
src/: logo  logo.cpp  main.cpp
